@@ -24,7 +24,7 @@ plugins {
     id 'application'                                    // Creating application bundles
     id 'build-dashboard'                                // Produces a build report
     id 'checkstyle'                                     // Checkstyle for Java, configured further below
-    id "com.github.spotbugs" version '5.2.5'           // Spotbugs for Java
+    id "com.github.spotbugs" version '6.0.15'           // Spotbugs for Java
     id 'java'                                           // Core java / javac
     id 'maven-publish'                                  // Publishing to Maven Central
     id 'pmd'                                            // PMD for Java, configured further below
@@ -33,7 +33,7 @@ plugins {
     id 'edu.sc.seis.launch4j' version '3.0.5'           // Creates launch4j
     id 'com.github.ben-manes.versions' version '0.51.0' // Checks versions for plugins and dependencies
     id "com.dorongold.task-tree" version '3.0.0'        // Prints the task dependency tree
-    id 'org.openjfx.javafxplugin' version '0.1.0'      // JavaFX support
+    id 'org.openjfx.javafxplugin' version '0.1.0'       // JavaFX support
     id 'org.beryx.runtime' version '1.13.1'             // Creates custom runtimes
 }
 
@@ -41,20 +41,8 @@ plugins {
  * Set the version and the modules we want from JavaFX (not everything)
  */
 javafx {
-    version = "17"
+    version = "21"
     modules = [ 'javafx.controls', 'javafx.web', 'javafx.swing', 'javafx.fxml', 'javafx.graphics' ]
-
-    /*
-     * Check if running in intellij ide. If so bundles javafx in to jar. If not only
-     * compiles so that runtime can add different platform javafx later.
-     *
-     * Also allows for gradle property which if true will force the single
-     * platforms javafx to be bundled to create local build. Can be added in
-     * command line with "-PlocalOnly=true."
-     */
-    if (!System.getProperty('idea.active') && !(localOnly.toBoolean())) {
-        configuration = "compileOnly"
-    }
 }
 
 // Set the groupId as it helps with Maven
@@ -66,10 +54,14 @@ description = """PCGen"""
 // Default task if you just run ./gradlew
 defaultTasks 'build'
 
+// Folder where build output is primarily stored
+// TODO try to figure out why we need it here and not in ext block
+String buildDirectory = getLayout().getBuildDirectory().toString()
+
 // Configure Java, in particular the version to test/compile/run with
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -77,9 +69,6 @@ java {
 ext {
     // Where code gets compiled to
     binDir = "code/bin"
-
-    // Folder where build output is primarily stored
-    String buildDir = "$projectDir/build"
 
     // Folder where exe / jar files are placed.
     outputDir = "$projectDir/output"
@@ -91,7 +80,7 @@ ext {
     modsDir = "$projectDir/mods"
 
     // Installers are placed here
-    releaseDir = "${buildDir}/release"
+    releaseDir = "$projectDir/build/release"
 }
 
 application {
@@ -121,7 +110,8 @@ repositories {
         url 'http://pc-gen.org/librepo/'
         allowInsecureProtocol = true
     }
-    // Use Maven plugin to reference jboss repository as well
+    // Use Maven plugin to reference freehep (https://java.freehep.org/) artifact repository
+    // TODO Which libs do we pull from here?
     maven {
         name = 'free'
         url = 'https://java.freehep.org/maven2'
@@ -130,7 +120,10 @@ repositories {
         name = 'local'
         url = 'installers'
     }
+    // Use Maven plugin to reference JBoss artifact repository
+    // TODO Which libs do we pull from here?
     maven {
+        name = 'jboss'
         url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/"
     }
 }
@@ -222,7 +215,7 @@ compileJava {
  */
 dependencies {
 
-    implementation group: 'commons-io', name: 'commons-io', version:'2.16.0'
+    implementation group: 'commons-io', name: 'commons-io', version:'2.16.1'
 
     implementation group: 'org.springframework', name: 'spring-web', version:'6.1.8'
     implementation group: 'org.springframework', name: 'spring-beans', version:'6.1.8'
@@ -268,19 +261,13 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
     testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.18'
-    // TODO openjfx-monocle is no longer updated and chances are openjfx-monocle doesn't work with latest OpenJFX
-    // https://github.com/TestFX/Monocle/issues/79
-    testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: 'jdk-12.0.1+2'
-    constraints {
-        implementation('org.openjfx:javafx-base:22.0.1')
-        implementation('org.openjfx:javafx-controls:22.0.1')
-        implementation('org.openjfx:javafx-graphics:22.0.1') {
-            because 'Monocle uses 12.0.1+2 that does not support Mac`s ARM'
-        }
-    }
+    testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: '21.0.2'
 
     testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version:'2.10.0'
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
+
+    pmd 'net.sourceforge.pmd:pmd-ant:7.0.0'
+    pmd 'net.sourceforge.pmd:pmd-java:7.0.0'
 }
 
 // Properties to support Ant builds
@@ -321,9 +308,10 @@ jar {
  * Create a Java runtime built from Java modules
  */
 runtime {
-    options = ['--compress', '2']
+    options = ['--compress', 'zip-6'] // Equivalent to the old '2' value pre Java 21
     modules = [
     'jdk.httpserver',
+    'java.management',
     'java.rmi',
     'java.desktop',
     'java.xml',
@@ -345,11 +333,10 @@ runtime {
     'javafx.graphics'
     ]
 
-    // We support Mac/Win/Linux x86-64, Mac/Linux aarch64, and Win x86-32
+    // We support Mac/Win/Linux x86-64, Mac/Linux aarch64
     targetPlatform('linux-x64', "$projectDir/jre/linux/jre_x64")
     targetPlatform('linux-aarch64', "$projectDir/jre/linux/jre_aarch64")
     targetPlatform('windows-x64', "$projectDir/jre/windows/jre_x64")
-    targetPlatform('windows-x32', "$projectDir/jre/windows/jre_x32")
     targetPlatform('mac-x64', "$projectDir/jre/mac/jre_x64/Contents/Home")
     targetPlatform('mac-aarch64', "$projectDir/jre/mac/jre_aarch64/Contents/Home")
 
@@ -391,7 +378,7 @@ runtime {
 tasks.jpackageImage.doLast {
     copy {
         includeEmptyDirs = false
-        from "${buildDir}/install/pcgen/"
+        from "${buildDirectory}/install/pcgen/"
         exclude "**/*.exe"
         exclude "**/*.bat"
         exclude "pcgen"
@@ -404,15 +391,15 @@ tasks.jpackageImage.doLast {
         }
     }
 
-    // Mac specific
+    // Mac OS X specific config for jpackage
     if (Os.isFamily(Os.FAMILY_MAC)){
         copy {
             from "${projectDir}/installers/mac-installer"
             include "MacDirLauncher"
             fileMode 0755
-            into "${buildDir}/jpackage/PcGen.app/Contents/MacOS"
+            into "${buildDirectory}/jpackage/PcGen.app/Contents/MacOS"
         }
-        ant.replace(file: "${buildDir}/jpackage/PcGen.app/Contents/Info.plist", token: "<key>CFBundleExecutable</key>\n  <string>PcGen</string>", value: "<key>CFBundleExecutable</key>\n  <string>MacDirLauncher</string>")
+        ant.replace(file: "${buildDirectory}/jpackage/PcGen.app/Contents/Info.plist", token: "<key>CFBundleExecutable</key>\n  <string>PcGen</string>", value: "<key>CFBundleExecutable</key>\n  <string>MacDirLauncher</string>")
     }
 }
 
@@ -438,14 +425,16 @@ artifacts {
 
 task copyToLibs(type: Copy, dependsOn:[startScripts,distTar,distZip,installDist]) {
     mustRunAfter createExe
-    into "$buildDir/libs"
+    into "${buildDirectory}/libs"
     from configurations.runtimeClasspath
 }
 
 task copyToOutput(type: Copy, dependsOn: [createExe, copyToLibs, jar, converterJar]) {
-    from "$buildDir/libs/pcgen-${version}.jar"
-    from "$buildDir/libs/pcgen-${version}-batch-convert.jar"
-    from "$buildDir/launch4j/pcgen.exe"
+    println("IN copyToOutput")
+
+    from "${buildDirectory}/libs/pcgen-${version}.jar"
+    from "${buildDirectory}/libs/pcgen-${version}-batch-convert.jar"
+    from "${buildDirectory}/launch4j/pcgen.exe"
     from "$projectDir/code/pcgen.bat"
     from("$projectDir/code/pcgen.sh") {
         filter(FixCrLfFilter, eol:FixCrLfFilter.CrLf.newInstance("lf"))
@@ -458,7 +447,7 @@ task copyToOutput(type: Copy, dependsOn: [createExe, copyToLibs, jar, converterJ
 
 task qbuild(type: Copy, dependsOn: [copyToOutput, jar]) {
     description="Copy the executable file into 'output' to create a working environment"
-    from "$buildDir/libs/pcgen-${version}.jar"
+    from "${buildDirectory}/libs/pcgen-${version}.jar"
 
     into outputDir
 
@@ -509,12 +498,14 @@ clean {
 build.mustRunAfter clean
 
 task downloadJRE {
-    def major = 17
-    def archs = ['x64', 'x32', 'aarch64']
+    println("IN downloadJRE")
+
+    def major = 21
+    def archs = ['x64', 'aarch64']
     def osList = ['windows', 'mac', 'linux']
     def extension = 'zip'
 
-    println("Downloading JDKS for use in creating the runtime bundles.")
+    println("Downloading JDKs for use in creating the runtime bundles.")
 
     osList.each{
         def os = "${it}"
@@ -523,7 +514,7 @@ task downloadJRE {
         }
         archs.each {
             def arch = "${it}"
-            if (arch == "x32" && os != "windows") return
+            // TODO We don't currently support Windows Aarch64 but once Eclipse Adoptium does we should remove this line
             if (arch == "aarch64" && os == "windows") return
 
             def url = "https://api.adoptium.net/v3/binary/latest/${major}/ga/${os}/${arch}/jdk/hotspot/normal/eclipse"
@@ -583,68 +574,55 @@ task downloadJRE {
                 }
                 file("${projectDir}/jre/${os}/jre_${arch}").list().each { f->
                     if(f.startsWith("jdk")) {
-                        file("${projectDir}/jre/${os}/jre_${arch}/"+f).deleteDir()
+                        file("${projectDir}/jre/${os}/jre_${arch}/" + f).deleteDir()
                     }
                 }
             }
             else {
-                println("Java ${major} ${arch} for ${os} already exists at ${jreDir}")
+                println("* Java ${major} ${arch} for ${os} already exists at ${jreDir}")
             }
         }
     }
 }
 
 task downloadJavaFXModules(dependsOn: downloadJRE) {
-    // We support Windows/Mac/Linux - x64, Mac/Linux - aarch64, and Windows x86 (32-bit)
-    def major = "17.0.8"
-    def archs = ['x64', 'x86', 'aarch64']
+    println("IN downloadJavaFXModules")
+
+    // We support Windows/Mac/Linux - x64, and Mac/Linux - aarch64
+    // (JavaFX doesn't support Linux/aarch64 in 21 LTS, use 21.0.1 instead)
+    def major = "21.0.2"
+    def archs = ['x64', 'aarch64']
     def osList = ["windows", "mac", "linux"]
 
     println("Downloading JavaFX modules (.mods) for use in the runtime bundles.")
     // Downloads javafx .mods for custom runtime image. All platforms downloaded
-    osList.each {
-        def os = "${it}"
+    osList.each { os ->
+        // Build the os part of the filename string. Gluon renamed the mac package to osx
+        def osPackage = (os == "mac") ? "osx" : os
 
-        archs.each {
-            def arch = "$it"
-
+        archs.each { arch ->
             // build the architecture part of the download filename string
             def archAppend
-            if (arch == "x86") {
-                // Only Windows for x86-32 bit
-                if (os == "windows") {
-                    archAppend = "-x86"
-                } else {
-                    return
-                }
-            } else if (arch == "x64") {
+            if (arch == "x64") {
                 archAppend = "-x64"
-            } else if (arch == "aarch64") {
-                // Only Linux and Mac for aarch64
-                if (os != "windows") {
-                    archAppend = "-aarch64"
-                } else {
-                    return
+            } else if (arch == "aarch64" && os != "windows") {
+                archAppend = "-aarch64"
+                if (os == "linux") {
+                    major = "21.0.1" // TODO other versions don't supply aarch64 for Linux, use 21.0.1 instead
                 }
             } else {
-                archAppend = "-UNSUPPORTED-ARCHITECTURE"
+                return
             }
 
-            // Build the os part of the filename string.
-            // Gluon renamed the mac package to osx
-            def osPackage = os
-            if (os == "mac") {
-                osPackage = "osx"
-            }
-
-            // URLs look like this: https://download2.gluonhq.com/openjfx/17.0.6/openjfx-17.0.6_osx-aarch64_bin-jmods.zip
+            // URLs look like this: https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_osx-aarch64_bin-jmods.zip
             def url = "https://download2.gluonhq.com/openjfx/${major}/openjfx-${major}_${osPackage}${archAppend}_bin-jmods.zip"
 
             def jmodsZip = new File("${projectDir}/jre/${os}/jmods${arch}.zip")
-            // If we don't already have the jmods, download them and unzip them
-            // to the correct place.
+
+            // If we don't already have the jmods, download them and unzip them to the correct place.
             if (!jmodsZip.exists()) {
-                println("Downloading Javafx mods ${major} ${arch} for ${os} from ${url}")
+                println("Downloading JavaFX mods ${major} ${arch} for ${os} from ${url} to ${projectDir}/jre/${os}/")
+
                 download.run {
                     src url
                     dest new File("${projectDir}/jre/${os}/", "jmods${arch}.zip")
@@ -653,15 +631,10 @@ task downloadJavaFXModules(dependsOn: downloadJRE) {
 
                 copy {
                     def zipFile = file("${projectDir}/jre/${os}/jmods${arch}.zip")
-                    def outputDir = "${projectDir}/jre/${os}/jre_${arch}/jmods"
-                    if (os == "mac")
-                    {
-                        outputDir = "${projectDir}/jre/${os}/jre_${arch}/Contents/Home/jmods"
-                    }
-                    else if(os == "windows" && arch == "x86")
-                    {
-                        outputDir = "${projectDir}/jre/${os}/jre_x32/jmods"
-                    }
+                    def outputDir = (os == "mac")
+                            ? "${projectDir}/jre/${os}/jre_${arch}/Contents/Home/jmods"
+                            : "${projectDir}/jre/${os}/jre_${arch}/jmods"
+
                     println "Unzipping ${zipFile} to ${outputDir}"
                     from zipTree(zipFile)
                     into outputDir
@@ -672,7 +645,7 @@ task downloadJavaFXModules(dependsOn: downloadJRE) {
                     }
                 }
             } else {
-                println("${jmodsZip} already exists")
+                println("* ${jmodsZip} already exists")
             }
         }
     }
@@ -681,10 +654,9 @@ task downloadJavaFXModules(dependsOn: downloadJRE) {
     // Downloads javafx sdk for local platform. Used for running tests.
     println("Downloading JavaFX SDK for use in local testing.")
     def sdkDir = new File("${projectDir}/mods")
-    if (!sdkDir.exists() || sdkDir.list().length == 0) {
-
+    if (!sdkDir.exists() || !sdkDir.list()) {
         // TODO I'll confess much of this seems redundant, but I'm not touching it
-        def os=""
+        def os
         if (Os.isFamily(Os.FAMILY_WINDOWS)) {
             os = "windows"
         } else if (Os.isFamily(Os.FAMILY_MAC)) {
@@ -696,25 +668,20 @@ task downloadJavaFXModules(dependsOn: downloadJRE) {
         def hostArchitecture = System.getProperty("os.arch")
 
         // We default to x86_64 as default
-        def archAppend= ""
+        def archAppend
         if (hostArchitecture == "x86_64" || hostArchitecture == "amd64") {
             archAppend= "-x64"
-        } else if (hostArchitecture == "i386") {
-            archAppend= "-x86" // TODO Not sure if this is supported.
         } else if (hostArchitecture == "aarch64") {
             archAppend= "-aarch64"
         } else {
             archAppend = "-UNSUPPORTED-ARCH"
         }
 
-        println("Host arch is ${hostArchitecture}")
+        println("Host arch is ${hostArchitecture}, host OS is ${os}")
 
         // Gluon renamed the mac package so we deal with that but leave the
         // the rest of the naming / packing as 'mac'.
-        def osPackage = os
-        if (os == "mac") {
-            osPackage = "osx"
-        }
+        def osPackage = (os == "mac") ? "osx" : os
 
         def url = "https://download2.gluonhq.com/openjfx/${major}/openjfx-${major}_${osPackage}${archAppend}_bin-sdk.zip"
 
@@ -727,7 +694,6 @@ task downloadJavaFXModules(dependsOn: downloadJRE) {
         }
 
         copy {
-
             def zipFile = file("${projectDir}/mods/javaFXSdk-${os}.zip")
             def outputDir = "${projectDir}/mods"
             println "Unzipping ${zipFile} to ${outputDir}"
@@ -849,10 +815,13 @@ allprojects {
                 '-Djavafx.macosx.embedded=true',
 
                 "--module-path", "${projectDir}/mods/lib/",
-                "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml",
+                "--add-modules", "javafx.controls,javafx.web,javafx.swing,javafx.fxml,javafx.graphics",
 
                 // Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
                 '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                // Next two needed to support monocle testing
+                '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
         ]
     }
@@ -861,7 +830,8 @@ allprojects {
 
             if (name.toLowerCase().contains("test")) {
                 options.compilerArgs << "--module-path" << "${projectDir}/mods/lib/"
-                options.compilerArgs << "--add-modules" << "javafx.controls,javafx.web,javafx.swing,javafx.fxml"
+                //options.compilerArgs << "--add-modules" << "javafx.controls,javafx.web,javafx.swing,javafx.fxml" // Not sure why no javafx.graphics here
+                options.compilerArgs << "--add-modules" << "javafx.controls,javafx.web,javafx.swing,javafx.fxml,javafx.graphics"
             }
             println "Args for for $name are $options.allCompilerArgs"
         }
